# voicebox

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.google-cloud-tts.txt  tasks.py
.github/workflows/: python-package.yml
docs/: CONTRIBUTING.md  README.md  conf.py  index.md  index.rst  modules.rst  samples.rst  voicebox.effects.rst  voicebox.examples.rst  voicebox.rst  voicebox.sinks.rst  voicebox.tts.rst  voicebox.voiceboxes.rst
requirements/: amazon-polly.txt  elevenlabs.txt  gtts.txt  main.txt  test.txt
src/voicebox/: __init__.py  __main__.py  audio.py  ssml.py  utils.py
src/voicebox/effects/: __init__.py  chain.py  dc_offset.py  delay.py  distortion.py  effect.py  eq.py  flanger.py  glitch.py  modulation.py  normalize.py  pedalboard.py  ring_mod.py  tail.py  utils.py  vocoder.py
src/voicebox/examples/: battle_droid.py  demo.py  glados.py  halo_spark.py
src/voicebox/sinks/: __init__.py  (+4 more)
tests/: test_audio.py  test_ssml.py  utils.py
tests/effects/: test_chain.py
tests/integration/: test_all_ttss_basic.py  test_sinks.py
tests/sinks/: test_distributor.py  test_sink.py  test_sounddevice.py  test_wavefile.py
tests/tts/: test_amazonpolly.py  test_cache.py  test_elevenlabs.py  test_espeakng.py  test_googlecloudtts.py  test_gtts.py  test_picotts.py  test_pyttsx3.py  test_tts.py  test_utils.py
tests/unit/: test_audio.py  test_simple.py  test_ssml.py  utils.py
tests/voiceboxes/: test_base.py  test_chunked.py  test_parallel.py  test_queue.py  test_simple.py  test_splitter.py
voicebox/: __init__.py  __main__.py  audio.py  ssml.py  types.py  voicebox.py
voicebox/effects/: __init__.py  chain.py  dc_offset.py  delay.py  distortion.py  effect.py  eq.py  glitch.py  modulation.py  normalize.py  samplerate.py  test_eq.py  test_normalize.py  utils.py  vocoder.py
voicebox/examples/: battle_droid.py  demo.py  glados.py  halo_spark.py
voicebox/sinks/: __init__.py  sink.py  sounddevice.py  wavefile.py
voicebox/tts/: __init__.py  amazonpolly.py  cache.py  googlecloudtts.py  gtts.py  picotts.py  test_cache.py  tts.py  utils.py
voicebox/voiceboxes/: base.py  chunked.py  splitter.py  test_splitter.py
(+41 files in other folders)
